--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: /img # Where to find the images in the live site
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "_posts/blog" # The path to the folder where the documents are stored
+    folder: "content/_posts/blog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -33,7 +33,7 @@ collections:
     label: Pages
     editor:
       preview: true
-    folder: _pages
+    folder: content/_pages
     slug: '{{slug}}'
     create: true # Allow users to create new documents in this collection
     fields:
@@ -74,7 +74,7 @@ collections:
   
   - name: "pageSections" 
     label: "Page Sections" 
-    folder: "_pagesections"
+    file: "content/pagesections.json"
     create: true 
     slug: "{{slug}}"
     fields: 
