--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "animate.css": "^4.1.0",
-    "gatsby": "^2.23.12",
-    "gatsby-image": "^2.4.9",
-    "gatsby-plugin-manifest": "^2.4.14",
+    "gatsby": "^2.24.11",
+    "gatsby-image": "^2.4.13",
+    "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-netlify-cms": "^4.3.11",
-    "gatsby-plugin-offline": "^3.2.13",
-    "gatsby-plugin-react-helmet": "^3.3.6",
+    "gatsby-plugin-offline": "^3.2.21",
+    "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-sharp": "^2.6.14",
-    "gatsby-source-filesystem": "^2.3.14",
-    "gatsby-transformer-remark": "^2.8.25",
-    "gatsby-transformer-sharp": "^2.5.7",
+    "gatsby-plugin-sharp": "^2.6.22",
+    "gatsby-source-filesystem": "^2.3.23",
+    "gatsby-transformer-json": "^2.4.11",
+    "gatsby-transformer-remark": "^2.8.27",
+    "gatsby-transformer-sharp": "^2.5.11",
     "netlify-cms-app": "^2.12.18",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
