--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: /img # Where to find the images in the live site
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "content/_posts/blog" # The path to the folder where the documents are stored
+    folder: "_posts/blog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -33,7 +33,7 @@ collections:
     label: Pages
     editor:
       preview: true
-    folder: content/_pages
+    folder: _pages
     slug: '{{slug}}'
     create: true # Allow users to create new documents in this collection
     fields:
@@ -72,21 +72,25 @@ collections:
 
   
   
-  - name: "pageSections" 
-    label: "Page Sections" 
-    file: "content/pagesections.json"
-    create: true 
-    slug: "{{slug}}"
-    fields: 
-      - {label: "Layout", name: "layout", widget: "relation", collection: "layouts", searchFields: ["name"], valueField: "name" }
-      - {label: "Title", name: "title", widget: "string"}
-      - label: "Content Items"
-        name: "contentItems"
-        collapsed: false
-        widget: "list"
-        fields:
-        - {label: "Title", name: "title", widget: "string"}
-        - {label: "Subtitle", name: "subtitle", widget: "string", required: false }
-        - {label: "Link", name: "link", widget: "string", required: false}
-        - {label: "LinkText", name: "linktext", widget: "string", required: false }        
-        - {label: "Image", name: "image", widget: "image", required: false }        
+  - name: "pageSectionInfo" 
+    label: "Page Section Info" 
+    files: 
+      - label: "Page Sections"
+        name: "pageSections"      
+        file: "content/_pagesections/pageSections.json"
+        format: "json"
+        create: true 
+        slug: "{{slug}}"
+        fields: 
+          - {label: "Layout", name: "layout", widget: "relation", collection: "layouts", searchFields: ["name"], valueField: "name" }
+          - {label: "Title", name: "title", widget: "string"}
+          - label: "Content Items"
+            name: "contentItems"
+            collapsed: false
+            widget: "list"
+            fields:
+              - {label: "Title", name: "title", widget: "string"}
+              - {label: "Subtitle", name: "subtitle", widget: "string", required: false }
+              - {label: "Link", name: "link", widget: "string", required: false}
+              - {label: "LinkText", name: "linktext", widget: "string", required: false }        
+              - {label: "Image", name: "image", widget: "image", required: false }        
