--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-slick": "^0.27.0"
+    "react-slick": "^0.27.0",
+    "read-excel-file": "^4.0.6"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "jest": "^26.2.2"
   },
   "keywords": [
     "gatsby"
@@ -43,7 +45,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
