--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.0",
     "gatsby": "^2.24.11",
     "gatsby-image": "^2.4.13",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-offline": "^3.2.21",
@@ -27,8 +28,14 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-image-gallery": "^1.0.8",
+    "react-redux": "^7.2.1",
     "react-slick": "^0.27.0",
-    "read-excel-file": "^4.0.6"
+    "react-toggle-component": "^3.0.8",
+    "read-excel-file": "^4.0.6",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "prettier": "2.0.5",
