--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-transformer-sharp": "^2.5.11",
     "netlify-cms-app": "^2.12.18",
     "node-sass": "^4.14.1",
+    "nouislider": "^14.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-animate-on-scroll": "^2.1.5",
