--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.0",
     "gatsby": "^2.24.11",
     "gatsby-image": "^2.4.13",
+    "gatsby-plugin-algolia": "^0.11.2",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-material-ui": "^2.1.10",
