--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "algoliasearch": "^4.4.0",
     "animate.css": "^4.1.0",
     "gatsby": "^2.24.11",
     "gatsby-image": "^2.4.13",
@@ -33,6 +34,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-image-gallery": "^1.0.8",
+    "react-instantsearch-dom": "^6.7.0",
     "react-redux": "^7.2.1",
     "react-slick": "^0.27.0",
     "react-toggle-component": "^3.0.8",
