--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "@reach/router": "^1.3.4",
     "algoliasearch": "^4.4.0",
     "animate.css": "^4.1.0",
     "gatsby": "^2.24.11",
